--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name = "keyword" content = "html">
+  <meta name = "keyword" content = "Aashish Kashichhwa">
   <meta name="description" content="I am a full-stack web developer. I can provide clean code and pixel perfect design.">
   <meta name="robots" content="NoFollow">
   <title>Aashish Kashichhwa</title>
@@ -91,4 +91,5 @@
     <p>Copyright © Aashish Kashichhwa 2023</p>
   </footer>
 </body>
+</html>
 
