Update portfolio webiste

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
 
             <div class="headshot">
-                <img src="pp.jpg" alt="Aashish Kashichhwa">
+                <img src="./img/pp.jpg" alt="Aashish Kashichhwa">
             </div>
         </section>
 
@@ -409,4 +409,5 @@
 </body>
 
 </html>
+
 
